add configuration object style modify

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -257,8 +257,8 @@
                                                                 case nameof(ConfigObjectPropertyModel.IsPublished):
                                                                     if (context.Item.IsPublished)
                                                                     {
-                                                                        <MIcon Style="margin-bottom:2px;color:#05CD99 !important" Size="16">mdi-link-variant</MIcon>
-                                                                        <span style="color:#05CD99;">@T("Released")</span>
+                                                                        <MIcon Class="green--text" Style="margin-bottom:2px;" Size="16">mdi-link-variant</MIcon>
+                                                                        <span class="green--text">@T("Released")</span>
                                                                     }
                                                                     else
                                                                     {
