--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
@@ -782,3 +782,16 @@ textarea:disabled {
 .masa-stack-components .m-data-table-header tr .m-icon {
     color: #A3AED0 !important;
 }
+.enable-encryption .m-input--switch__track {
+    color: #E9EDF7 !important;
+}
+.m-chip--envcluster:not(.m-chip--active) {
+    border-color: #E4E8F3 !important;
+}
+.m-chip--envcluster:not(.m-chip--active) .emphasis2--text
+{
+    color: #7681AB  !important;
+}
+.m-chip--envcluster .split--text {
+    color: #E4E8F3;
+}
