update clonemodal and releeasehistorymodal css

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
@@ -778,3 +778,7 @@ textarea:disabled {
 .m-expansion-panel-header.m-expansion-panel--disabled.m-btn--disabled .m-btn .m-icon {
     color: rgba(0,0,0,.26) !important;
 }
+
+.m-timeline::before {
+    background: #E4E8F3 !important;
+}
