--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/ReleaseHistoryModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/ReleaseHistoryModal.razor
@@ -1,5 +1,4 @@
 @inherits MasaCompontentBase
-
 <SSheetDialog EnableDomReload @bind-Value="Value" Title="@T("Release history")" Icon="mdi-circle" IconColor="success">
     <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
         <div>
@@ -18,7 +17,7 @@
                         {
                             int index = _index;
                             _index++;
-                            <MTimelineItem Class="d-flex align-start" HideDot="!release.IsActive" Small FillDot Right @onclick="()=>OnTimelineItemClickAsync(release)">
+                            <MTimelineItem Class="d-flex align-start" Style="padding-bottom:16px;" HideDot="!release.IsActive" Small FillDot Right @onclick="()=>OnTimelineItemClickAsync(release)">
                                 <IconContent>
                                     <MIcon Size="20" Color="primary">mdi-circle</MIcon>
                                 </IconContent>
@@ -58,7 +57,7 @@
                     </div>
                     <MSpacer></MSpacer>
                     <span style="color: #A3AED0; font-size:12px;">@T("Release time")：<DateTimeZone Value="@_selectReleaseHistory.CreationTime" /></span>
-                    <span class="mx-2">|</span>
+                    <span class="mx-2" style="color: #E4E8F3;">|</span>
                     <span style="color: #323D6F; font-size:12px;">@_selectReleaseHistory.CreatorName</span>
                 </div>
                 <div class="mt-6">
@@ -86,7 +85,7 @@
                                             DisableSort
                                             TItem="ConfigObjectPropertyModel"
                                             Items="@_selectReleaseHistory.ConfigObjectProperties"
-                                            Class="table-border-none"
+                                            Class="table-border-none table-release"
                                             HideDefaultFooter>
                                     <HeaderColContent Context="header">
                                         <span class="regular3--text btn">@header.Text</span>
@@ -100,7 +99,7 @@
                                             DisableSort
                                             TItem="ConfigObjectPropertyModel"
                                             Items="@_changedProperties"
-                                            Class="table-border-none"
+                                            Class="table-border-none table-release"
                                             HideDefaultFooter>
                                     <HeaderColContent Context="header">
                                         <span class="regular3--text btn">@header.Text</span>
